--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11958,6 +11958,58 @@ fieldset:disabled .btn {
 }
 
 body {
-  background-color: #343a40;
+  background-color: #24282f;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+li {
+  font-weight: 700;
+}
+
+.btn {
+  border: 1px solid orange;
+  font-weight: 700;
+}
+
+.btn:hover {
+  background: orange;
+  color: white;
+}
+
+.btn:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.form-control {
+  border: 1px solid orange;
+}
+
+.form-control:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: 1px solid black;
+}
+
+h1, .h1 {
+  font-weight: 900;
+  font-size: 100px;
+}
+
+.card {
+  background-color: #3c3e44;
+}
+
+h3, .h3 {
+  color: white;
+  font-weight: 900;
+}
+
+h3:hover, .h3:hover {
+  color: orange;
+}
+
+p {
+  color: white;
 }
 /*# sourceMappingURL=estilos.css.map */
