--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,5 +1,47 @@
-@import '../bootstrap/scss/bootstrap.scss';
+@import '../bootstrap/scss/bootstrap';
 
 body{
-    background-color: $gray-800;
+    background-color: #24282f;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+// Barra de navegacion
+li{
+    font-weight: 700;
+}
+.btn{
+    border: 1px solid orange;
+    font-weight: 700;
+}
+.btn:hover{
+    background: orange;
+    color: white;
+}
+.btn:focus {
+    box-shadow: none;
+}
+.form-control{
+    border: 1px solid orange;
+}
+.form-control:focus{
+    box-shadow: none;
+    border: 1px solid black;
+}
+// Titulo
+h1{
+    font-weight: 900;
+    font-size: 100px;
+}
+//Carta
+.card{
+    background-color: #3c3e44;
+}
+h3{
+    color: white;
+    font-weight: 900;
+}
+h3:hover{
+    color: orange;
+}
+p{
+    color: white;
 }
